//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  email String [unique, not null]
  File File [not null]
  Message Message [not null]
  stripeCustomerId String [unique]
  stripeSubscriptionId String [unique]
  stripePriceId String
  stripeCurrentPeriodEnd DateTime
}

Table File {
  id String [pk]
  name String [not null]
  uploadStatus UploadStatus [not null, default: 'PENDING']
  url String [not null]
  key String [not null]
  messages Message [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  User User
  userId String
}

Table Message {
  id String [pk]
  text String [not null]
  isUserMessage Boolean [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  User User
  userId String
  File File
  fileId String
}

Enum UploadStatus {
  PENDING
  PROCESSING
  FAILED
  SUCCESS
}

Ref: File.userId > User.id

Ref: Message.userId > User.id

Ref: Message.fileId > File.id